[tool.poetry]
name = "repl_nix_ChatGPT-Line-Bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
youtube-transcript-api = "^0.5.0"
bs4 = "^0.0.1"
Flask = "^2.2.3"
line-bot-sdk = "^2.4.2"
OpenCC = "^1.1.6"
pymongo = "^4.3.3"
openai = "^0.27.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
